<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>

    <!-- MAIN ACTIVITY -->
    <!-- BOTTOM NAVIGATION -->
    <string name="title_map_view" translatable="false">Map View</string>
    <string name="title_list_view" translatable="false">List View</string>
    <string name="title_workmates">Workmates</string>

    <!-- NAVIGATION DRAWER-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_your_lunch">Your Lunch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">logout</string>
    <string name="info_no_email_found">none mail adress</string>
    <string name="info_no_username_found">None username</string>

    <!-- MAPVIEW FRAGMENT-->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


    <!-- LOGIN ACTIVITY -->
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="find_a_nice_restaurant_and_invite_your_co_workers_for_lunch">Find a nice restaurant and invite your co-workers for lunch</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="error_authentication_canceled">Authentification canceled</string>
    <string name="error_unknown_error">Unknown error</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">1384391111948556</string>
    <string name="facebook_login_protocol_scheme" ignore="UnusedResources" translatable="false">fb1384391111948556</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="ApplicationName">Go4Lunch</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <!-- SETTINGS FRAGEMENT -->

    <string name="textview" translatable="false">textview</string>

    <!-- CHAT ACTIVITY -->
    <string name="menu_chat" translatable="false">chat</string>
    <string name="error_no_internet">None internet connexion !</string>
    <string name="connection_succeed">Autentification success</string>
    <string name="notification_title">Update username</string>
    <string name="button_update_account">Update username</string>
    <string name="button_delete_account">Delete account</string>
    <string name="popup_message_confirmation_delete_account">Do you really want delete your account ?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="rayon_de_recherche">Search radius</string>
    <string name="metres">meters</string>
    <string name="toolbar_title_mentor_chat_activity">Chat canal</string>
    <string name="text_input_title_mentor_chat_activity">Write your message</string>
    <string name="button_title_mentor_chat_activity">Send</string>
    <string name="text_view_mentor_chat_error">This discussion canal doesn\'t contains any messages yet</string>
    <string name="popup_title_permission_files_access">This application need autorization</string>
    <string name="toast_title_no_image_chosen">None picture choosen</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow" translatable="false">Slides</string>
    <string name="menu_tools">Tools</string>


</resources>

