<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map_view">

    <fragment
        android:id="@+id/nav_your_lunch"
        android:name="remy.pouzet.go4lunch.ui.yourlunch.YourLunchFragment"
        android:label="@string/menu_your_lunch"
        tools:layout="@layout/fragment_your_lunch" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="remy.pouzet.go4lunch.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="remy.pouzet.go4lunch.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/navigation_map_view"
        android:name="remy.pouzet.go4lunch.ui.mapview.MapViewFragment"
        android:label="@string/title_map_view"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/navigation_list_view"
        android:name="remy.pouzet.go4lunch.ui.listView.RestaurantsListViewFragment"
        android:label="@string/title_list_view"
        tools:layout="@layout/fragment_restaurants_list_view" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="remy.pouzet.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates_list_view" />

    <fragment
        android:id="@+id/nav_restaurants_details"
        android:name="remy.pouzet.go4lunch.ui.restaurantDetails.RestaurantDetailsFragment"
        android:label="restaurants details"
        tools:layout="@layout/restaurant_details_fragment" />

</navigation>