<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/ic_menu_camera" />

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold" />

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/find_a_nice_restaurant_and_invite_your_co_workers_for_lunch"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="bottom"
            android:orientation="vertical">

            <!-- BUTTON EMAIL LOGIN -->
            <Button
                android:id="@+id/main_activity_login_by_email"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@color/colorAccent"
                android:padding="@dimen/default_large_margin"
                android:text="@string/fui_sign_in_with_email"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON FB LOGIN -->
            <Button
                android:id="@+id/main_activity_login_by_fb"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@color/colorAccent"
                android:padding="@dimen/default_large_margin"
                android:text="@string/sign_in_with_facebook"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON GOOGLE LOGIN -->
            <Button
                android:id="@+id/main_activity_login_by_google"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@color/colorAccent"
                android:padding="@dimen/default_large_margin"
                android:text="@string/Sign_in_with_google"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
